# rag-chatbot

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  rag-chatbot.postman_collection.json  tsconfig.json
docs/: api.md  architecture.md  contributing.md  deployment.md  prd-chat-api.md  prd-processing-service.md  troubleshooting.md
docs/adr/: 0001-event-driven-processing-service.md
python-worker/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
python-worker/src/: __init__.py
python-worker/src/constants/: __init__.py  event_types.py
python-worker/src/consumer/: event_consumer.py
python-worker/src/extractors/: __init__.py  base_extractor.py  extractor_adapter.py  ocr_extractor.py  pdf_extractor.py
python-worker/src/publisher/: event_publisher.py
python-worker/src/services/: chunking_service.py  classification_service.py  receipt_parser.py  utils.py
python-worker/tests/: test_chunking_service.py  test_classification_service.py  test_event_consumer.py  test_event_contracts.py  test_extractor_adapter.py  test_ocr_extractor.py  test_pdf_extractor.py  test_receipt_parser.py
research/: preprocessing-visualization.ipynb
src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
src/agent/: agent.module.ts  agent.service.ts
src/chat/: chat-exception.filter.ts  chat-response.interceptor.ts  chat.controller.spec.ts  chat.controller.ts  chat.module.ts  chat.service.spec.ts  chat.service.ts
src/llm/: llm.service.ts
(+85 files in other folders)
