[tool.poetry]
name = "python-worker"
version = "0.1.0"
description = "File processing worker for receipt intelligence"
authors = ["Thomas Luu"]

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
PyPDF2 = "^3.0.1"
pdfplumber = "^0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
reportlab = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
