[tool.poetry]
name = "python-worker"
version = "0.1.0"
description = "File processing worker for receipt intelligence"
authors = ["Thomas Luu"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
pika = "^1.3.2"
PyPDF2 = "^3.0.1"
pdfplumber = "^0.11.0"
Pillow = "^11.1.0"
pillow-heif = "^1.3.0"
pytesseract = "^0.3.10"
anthropic = "^0.102.0"
opencv-python-headless = "^4.13.0.92"
numpy = "^2.4.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.14.0"
reportlab = "^4.0.0"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
